# =======================================================================================
# INCLUDE: PUBLIC HEADER
# =======================================================================================
include_directories(inc)

# =======================================================================================
# SUB_DIRECTORIES: MODULE LIST
# =======================================================================================
add_subdirectory(src/main)
add_subdirectory(src/module_1)
add_subdirectory(src/module_2)
add_subdirectory(src/module_3)