# =======================================================================================
# TARGET: MAIN
# =======================================================================================
add_executable(main 
                main.c
                main_internal.c)

# =======================================================================================
# TARGET: MAIN: LINKING LIBRARIES
# =======================================================================================
target_link_libraries(main PRIVATE module_1)
target_link_libraries(main PRIVATE module_2)
target_link_libraries(main PRIVATE module_3)

# =======================================================================================
# TARGET: MAIN: INSTALLATION
# =======================================================================================
install(TARGETS main DESTINATION bin)