# =======================================================================================
# TARGET: MODULE_1
# =======================================================================================
add_library(module_1 
            STATIC 
            module_1_internal.c
            module_1.c)

# =======================================================================================
# TARGET: MODULE_1: LINKING LIBRARIES
# =======================================================================================
target_link_libraries(module_1 PRIVATE module_3)