# =======================================================================================
# TARGET: MODULE_2
# =======================================================================================
add_library(module_2 
            STATIC 
            module_2.c 
            module_2_internal.c)

# =======================================================================================
# TARGET: MODULE_1: LINKING LIBRARIES
# =======================================================================================
target_link_libraries(module_2 PRIVATE module_3)